# trakstar_cpp

./: CMakeLists.txt  README.md
docker_20.04/: Dockerfile  build.sh  join.sh  start.sh  stop.sh
docker_22.04/: Dockerfile  build.sh  join.sh  start.sh  stop.sh
